--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "blade-ui-kit/blade-heroicons": "^1.2",
         "bref/bref": "^1.3",
+        "bref/laravel-bridge": "^1.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
