--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,10 @@ jobs:
       
       - uses: bahmutov/npm-install@v1
 
+      - uses: ramsey/composer-install@v1
+        with:
+          composer-options: "--prefer-dist --optimize-autoloader --ignore-platform-reqs"
+
       - name: Laravel Mix
         run: npm run prod
 
