--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,13 +31,13 @@ jobs:
 
       - name: Obtain NPM Cache directory
         id: npm-cache-dir
-        run: echo "::set-output name=dir::$(npm cache dir)"
+        run: echo "::set-output name=dir::$(npm config get cache)"
 
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
           path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package.lock') }}
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-npm-
 
       - uses: bahmutov/npm-install@v1
