--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Obtain NPM Cache directory
         id: npm-cache-dir
-        run: echo "::set-output name=dir::$(npm cache dir)"
+        run: echo "::set-output name=dir::$(npm config get cache)"
 
       - name: Cache NPM dependencies
         uses: actions/cache@v2
