--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,6 +107,8 @@ jobs:
     timeout-minutes: 5
     needs: [ deploy-serverless ]
     steps:
+      - uses: actions/checkout@v2
+
       - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ env.PHP_VERSION }}
