--- a/composer.json
+++ b/composer.json
@@ -5,26 +5,25 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.1",
         "barryvdh/laravel-debugbar": "^3.6",
         "blade-ui-kit/blade-heroicons": "^1.2",
-        "bref/bref": "^1.3",
-        "bref/laravel-bridge": "^1.1",
-        "fruitcake/laravel-cors": "^2.0",
+        "bref/bref": "^2.0@beta",
+        "bref/laravel-bridge": "^1.2",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.54",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "wire-elements/modal": "^1.0",
         "livewire/livewire": "^2.6"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.4",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.0",
         "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
