--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ env:
   DEPLOYMENT_REGION: af-south-1
   DEPLOYMENT_STAGE: production
   DEPLOYMENT_NAME: skwash
-  PHP_VERSION: '8.0'
+  PHP_VERSION: '8.1'
   PHP_EXTENSIONS: 'curl, dom, bcmath, mbstring, zip'
 
 jobs:
@@ -27,27 +27,20 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Obtain NPM Cache directory
-        id: npm-cache-dir
-        run: echo "::set-output name=dir::$(npm config get cache)"
-
-      - name: Cache NPM dependencies
-        uses: actions/cache@v2
+      - uses: actions/setup-node@v3
         with:
-          path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-npm-
-
-      - uses: bahmutov/npm-install@v1
+          node-version: 16
+          cache: 'npm'
+      - run: npm ci
 
       - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ env.PHP_VERSION }}
           extensions: ${{ env.PHP_EXTENSIONS }}
 
-      - uses: ramsey/composer-install@v1
+      - uses: ramsey/composer-install@v2
         with:
           composer-options: "--prefer-dist --no-dev --optimize-autoloader --ignore-platform-reqs"
 
@@ -69,44 +62,35 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ env.PHP_VERSION }}
           extensions: ${{ env.PHP_EXTENSIONS }}
 
-      - uses: ramsey/composer-install@v1
+      - uses: ramsey/composer-install@v2
         with:
           composer-options: "--prefer-dist --no-dev --optimize-autoloader --ignore-platform-reqs"
 
-      - name: Obtain NPM Cache directory
-        id: npm-cache-dir
-        run: echo "::set-output name=dir::$(npm config get cache)"
-
-      - name: Cache NPM dependencies
-        uses: actions/cache@v2
+      - uses: actions/setup-node@v3
         with:
-          path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package.lock') }}
-          restore-keys: ${{ runner.os }}-npm-
-
-      - uses: bahmutov/npm-install@v1
+          node-version: 16
+          cache: 'npm'
+      - run: npm ci
 
       - name: Laravel Mix
         run: npm run prod
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@master
+        uses: aws-actions/configure-aws-credentials@v1-node16
         with:
           role-to-assume: ${{ env.OIDC_ROLE }}
           role-session-name: ${{ env.DEPLOYMENT_NAME }}-code-deployer
           aws-region: ${{ env.DEPLOYMENT_REGION }}
 
       - name: Serverless Deploy
-        uses: serverless/github-action@v2.18.0
-        with:
-          args: deploy
+        run: ./node_modules/.bin/sls deploy
         env:
           RELEASE_HASH: ${{ github.sha }}
 
@@ -116,26 +100,23 @@ jobs:
     timeout-minutes: 10
     needs: [ deploy-serverless ]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ env.PHP_VERSION }}
           extensions: ${{ env.PHP_EXTENSIONS }}
 
-      - uses: ramsey/composer-install@v1
+      - uses: ramsey/composer-install@v2
         with:
           composer-options: "--prefer-dist --no-dev --optimize-autoloader --ignore-platform-reqs"
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@master
+        uses: aws-actions/configure-aws-credentials@v1-node16
         with:
           role-to-assume: ${{ env.OIDC_ROLE }}
           role-session-name: ${{ env.DEPLOYMENT_NAME }}-migrations-deployer
           aws-region: ${{ env.DEPLOYMENT_REGION }}
 
       - name: Run database migration
-      # function name is {service}-{stage}-artisan
-        run: vendor/bin/bref cli ${{ env.DEPLOYMENT_NAME }}-production-artisan -- migrate --force --ansi --no-interaction
-        env:
-          AWS_DEFAULT_REGION: ${{ env.DEPLOYMENT_REGION }}
+        run: ./node_modules/.bin/sls bref:cli "migrate --force --ansi --no-interaction"
