--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "postcss-import": "^12.0.1",
+        "serverless": "^3.26.0",
         "tailwindcss": "^2.2.19"
     }
 }
